--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 5.2 by INSERT NAME HERE</title>
+    <title>Lab 5.2 by Diana Montero</title>
 </head>
 <body>
     <script src="arrays_lab_2.js"></script>
